<resources>
    <string name="app_name">GHelmoRy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="choose_your_game">Choose your game</string>
    <string name="title">Title</string>
    <string name="game_title">Place the title of the game here</string>
    <string name="playtime_description">Playtime (m)</string>
    <string name="hint_playtime">39</string>
    <string name="description_of_play">Description of the play</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="add_player">Add Player</string>
    <string name="score">score</string>
    <string name="pseudo">pseudo</string>
    <string name="add_to_history">Add to history</string>
    <string name="new_game">new game</string>
    <string name="choose_image">Choose Image</string>
    <string name="_0">0</string>
    <string name="_99">99</string>
    <string name="game_type_summary">Game Type Info</string>
    <string name="game_image">Game Image</string>
    <string name="game_history">Game History</string>
    <string name="players_list">Players list</string>
    <string name="number_of_players">Number of players</string>
    <string name="select_location">Select Location</string>
    <string name="google_maps_key"></string>
    <string name="done">Done</string>
    <string name="location">Location</string>
    <string name="address">no Data</string>
    <string name="avg_score">Avg. Score</string>
    <string name="total_games">Total Games</string>
    <string name="avg_time">Avg. Time</string>
    <string name="per_player">Per Player</string>
</resources>