<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameAdd.AddGameFragment"
    >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <EditText
        android:id="@+id/titleEdit"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="15sp"
        android:hint="@string/game_title"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        />

    <TextView
        android:id="@+id/playtimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playtime_description"
        app:layout_constraintStart_toStartOf="@+id/playtimeEdit"
        app:layout_constraintBottom_toTopOf="@+id/playtimeEdit"

        />

    <EditText
        android:id="@+id/playtimeEdit"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/hint_playtime"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/titleEdit"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        />
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_of_play"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit"
        app:layout_constraintStart_toStartOf="@+id/titleEdit"
        />
    <EditText
        android:id="@+id/descriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/enter_your_text_here"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="2"
        android:gravity="top"
        android:maxLines="7"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        />
    <TextView
        android:id="@+id/playerNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_players"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdit"

        />


    <EditText
        android:id="@+id/minPlayerEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/playerNumberTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25"

        />
    <EditText
        android:id="@+id/maxPlayerEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/_99"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/minPlayerEdit"
        app:layout_constraintTop_toTopOf="@+id/minPlayerEdit"
        app:layout_constraintWidth_percent="0.25"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_image_24"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/maxPlayerEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/game_image" />

    <Button
        android:id="@+id/chooseImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        />
    <Button
        android:id="@+id/validateAddGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        app:layout_constraintTop_toBottomOf="@id/chooseImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>