<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addChoiceFragmentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".gameInstanceAddChoice.AddChoiceFragment">

    <TextView
        android:id="@+id/gameChooserTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_game"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/game_spinner_container"
        />




    <FrameLayout
        android:id="@+id/game_spinner_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addGameButton"
        app:layout_constraintTop_toBottomOf="@id/gameChooserTextView"
        />
    <Button
        android:id="@+id/addGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameChooserTextView"
        />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/game_spinner_container"
        app:layout_constraintTop_toBottomOf="@+id/game_spinner_container"

        />
    <EditText
        android:id="@+id/titleEdit"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="15sp"
        android:hint="@string/game_title"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        />

    <TextView
        android:id="@+id/playtimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playtime_description"
        app:layout_constraintStart_toStartOf="@+id/playtimeEdit"
        app:layout_constraintBottom_toTopOf="@+id/playtimeEdit"

        />

    <EditText
        android:id="@+id/playtimeEdit"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/hint_playtime"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/titleEdit"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        />
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_of_play"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit"
        app:layout_constraintStart_toStartOf="@+id/titleEdit"
        />
    <EditText
        android:id="@+id/descriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/enter_your_text_here"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="2"
        android:gravity="top"
        android:maxLines="7"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        />
    <TextView
        android:id="@+id/addPlayerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdit"

        />


    <EditText
        android:id="@+id/addPlayerNameEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/pseudo"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/addPlayerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45"

         />
    <EditText
        android:id="@+id/addPlayerScoreEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/score"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/addPlayerNameEdit"
        app:layout_constraintTop_toTopOf="@+id/addPlayerNameEdit"
        app:layout_constraintWidth_percent="0.25"
        />
    <Button
        android:id="@+id/addPlayerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/addPlayerScoreEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addPlayerNameEdit"
        app:layout_constraintWidth_percent="0.25"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/addPlayerNameEdit"
        tools:listitem="@layout/player_item_list"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_image_24"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/playerList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/chooseImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
         />
    <Button
        android:id="@+id/selectLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        app:layout_constraintTop_toBottomOf="@+id/chooseImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        />
    <!--
    TODO add Location ??
    -->
    <Button
        android:id="@+id/addToHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_to_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectLocationButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>