<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameInstanceDetails.GameInstanceDetailsFragment"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    >

    <TextView
        android:id="@+id/historyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/game_history"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/historyTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/historyTextView"
        app:layout_constraintTop_toBottomOf="@+id/historyTextView"

        />
    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/game_title"
        app:layout_constraintStart_toStartOf="@+id/historyTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/historyTitleTextView"
        />
    <TextView
        android:id="@+id/historyPlaytimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playtime_description"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/historyPlaytime"
        app:layout_constraintBottom_toTopOf="@+id/historyPlaytime"

        />

    <TextView
        android:id="@+id/historyPlaytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_playtime"
        android:layout_marginStart="16dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/historyTitle"
        app:layout_constraintTop_toBottomOf="@+id/historyTitleTextView"
        />
    <TextView
        android:id="@+id/historyDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_of_play"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/historyTitle"
        app:layout_constraintStart_toStartOf="@+id/historyTitle"
        />
    <TextView
        android:id="@+id/historyDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_text_here"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="2"

        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/historyDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/historyDescriptionTextView"
        />
    <TextView
        android:id="@+id/historyPlayerListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_list"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/historyDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/historyDescription"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/historyPlayerListTextView"
        app:layout_constraintStart_toStartOf="@+id/historyPlayerListTextView"
        />
    <ImageView
        android:id="@+id/historyImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_image_24"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/historyRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/game_image" />

    <TextView
        android:id="@+id/historyLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/historyPlayerListTextView"
        app:layout_constraintTop_toBottomOf="@+id/historyImageView"

        />
    <TextView
        android:id="@+id/historyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/address"
        app:layout_constraintStart_toStartOf="@+id/historyLocationTextView"
        app:layout_constraintTop_toBottomOf="@+id/historyLocationTextView"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/historyLocation"
        app:layout_constraintStart_toStartOf="@+id/historyLocation"
        />
    <TextView
        android:id="@+id/gameTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/game_type_summary"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/gameInfoTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/gameTypeTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameTypeTextView"

        />
    <TextView
        android:id="@+id/gameInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/game_title"
        app:layout_constraintStart_toStartOf="@+id/gameInfoTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoTitleTextView"
        />
    <TextView
        android:id="@+id/gameInfoPlaytimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playtime_description"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/gameInfoPlaytime"
        app:layout_constraintBottom_toTopOf="@+id/gameInfoPlaytime"

        />

    <TextView
        android:id="@+id/gameInfoPlaytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_playtime"
        android:layout_marginStart="16dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoTitle"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoTitleTextView"
        />
    <TextView
        android:id="@+id/gameInfoDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_of_play"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoTitle"
        app:layout_constraintStart_toStartOf="@+id/gameInfoTitle"
        />
    <TextView
        android:id="@+id/gameInfoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_text_here"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="2"

        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/gameInfoDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoDescriptionTextView"
        />
    <TextView
        android:id="@+id/gameInfoPlayerNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_players"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/gameInfoDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoDescription"
        />
    <TextView
        android:id="@+id/gameInfoPlayerNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoPlayerNumberTextView"
        app:layout_constraintStart_toStartOf="@+id/gameInfoPlayerNumberTextView"
        />
    <ImageView
        android:id="@+id/gameInfoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_image_24"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoPlayerNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/game_image" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>